@@ -71,7 +71,7 @@ oafinfo_DATA=gconfd.oafinfo
 
 
 install-data-local:
-	-mkdir $(sysconfdir)/gconf
-	$(INSTALL_DATA) $(top_srcdir)/gconf/default.path $(sysconfdir)/gconf/path.example
+	-mkdir -p $(sysconfdir)/gconf
+	$(INSTALL_DATA) default.path $(sysconfdir)/gconf/path.example
 
 
