@@ -1,3 +1,6 @@
+2000-01-27  Elliot Lee  <sopwith@redhat.com>
+	* gconf/Makefile.am, standard-schemas/Makefile.am: Fix builddir != srcdir
+
 2000-01-24  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-sources.c (gconf_sources_new_from_addresses):
